新增锻炼计划生成功能
- 在 ExercisePlan 模型中添加新的字段
- 创建 ExerciseDTO 类用于接收前端参数- 新增 ExercisePlanMapper 接口
- 实现 CreatePlanService 接口，使用 AI 生成计划
- 编写 ExercisePlanService 接口及其实现类
- 更新 AiClientUtil 类，使其返回完整的 AI 回复- 重命名 getPlan.java为 getPlanTest.java，并改为测试类
- 在 pom.xml 中添加 MyBatis-Plus 相关依赖

--- a/Fitseek/Fitseek-service/pom.xml
+++ b/Fitseek/Fitseek-service/pom.xml
@@ -28,6 +28,27 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <!--mybatis-plus-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>3.5.11</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
+            <version>3.5.11</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.2.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -59,6 +80,12 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>4.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>springboot</groupId>
+            <artifactId>Fitseek-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
